@@ -1,0 +1,1 @@
+extern char *bigcrypt(const char *key, const char *salt);
